[gd_scene load_steps=3 format=3 uid="uid://b8t2xh8c2k8kq"]

[ext_resource type="Script" uid="uid://d3yowldge4w2t" path="res://menu/main_menu.gd" id="1_06t4h"]
[ext_resource type="Theme" uid="uid://bfvu6aqf6k66o" path="res://menu/menu_theme.tres" id="2_f5okj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -500.0
offset_right = 750.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.364706, 0.258824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -101.0
offset_right = 400.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.995492)
alignment = 1

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 100
text = "GIVE ME YOUR LIMBS"
fit_content = true
horizontal_alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_f5okj")
text = "New Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits (very epic)"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Exit (bad answer)"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/Exit"]
layout_mode = 0
offset_left = 700.0
offset_top = 15.0
offset_right = 744.0
offset_bottom = 39.0
icon_alignment = 1

[node name="Start" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Start/VBoxContainer"]
layout_mode = 2
text = "This game requires two controllers. Please start when you have connected two controllers."
fit_content = true
horizontal_alignment = 1

[node name="RealStart" type="Button" parent="Start/VBoxContainer"]
layout_mode = 2
text = "Start Game?"

[node name="ToMenuFromStart" type="Button" parent="Start/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="Credits" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Made by ViviTheQueen, SourMnMs, and Bolb2019
9/27/2025

Some assets by Ottimations

Made for Hack Club's Daydream Boston 2025 Hackathon"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToMenuFromCredits" type="Button" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="VBoxContainer/Exit/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Start/VBoxContainer/RealStart" to="." method="_on_real_start_pressed"]
[connection signal="pressed" from="Start/VBoxContainer/ToMenuFromStart" to="." method="_on_to_menu_from_start_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/ToMenuFromCredits" to="." method="_on_to_menu_from_credits_pressed"]
